# elm-marshall

./: ChangeLog.md  LICENSE  default.nix  elm-marshall.cabal  shell.nix
src/Elm/: Marshall.hs
src/Elm/Marshall/: Aeson.hs  App.hs  Class.hs  Type.hs
src/Elm/Marshall/Internal/: Aeson.hs  App.hs  Class.hs  Type.hs
