name:                elm-marshall
version:             0.1.0.0
synopsis:            Provide marshalling between Elm and ghcjs. Allows ghcjs to become Elm's IO monad.
-- description:
license:             MIT
license-file:        LICENSE
author:              Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Elm.Marshall.Class
    , Elm.Marshall.App

  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.8
    , containers
    , ghcjs-base
    , ghcjs-dom
    , ghcjs-ffiqq
    , text

  hs-source-dirs:      src
  default-language:    Haskell2010
