name:                elm-marshall
version:             0.1.0.0
synopsis:            Provide marshalling between Elm and ghcjs. Allows ghcjs to become Elm's IO monad.
-- description:
license:             MIT
license-file:        LICENSE
author:              Falco Peijnenburg
maintainer:          fpeijnenburg@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Elm.Marshall

    -- You shouldn't need these. Please create an issue or a pull request if
    -- you do.
    , Elm.Marshall.Internal.Class
    , Elm.Marshall.Internal.App
    , Elm.Marshall.Internal.Aeson

  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.8
    , aeson
    , containers
    , ghcjs-base
    , ghcjs-dom
    , ghcjs-ffiqq
    , text

  hs-source-dirs:      src
  default-language:    Haskell2010
